@@ -1,5 +1,13 @@
 2025-07-22  Zhengyi Fu  <i@fuzy.me>
 
+	Replace term-keys with kkp
+
+	* init.el:
+	* packages.el
+
+
+2025-07-22  Zhengyi Fu  <i@fuzy.me>
+
 	Add history to `elfeed-search-live-filter'
 
 	* init.el (+elfeed-search-live-filter-with-history): New command.
